k8s/app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ff-app
  namespace: forum
spec:
  type: NodePort
  selector:
    app: ff-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31003
