k8s/app/app-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ff-ingressroute
  namespace: forum
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ff.lucasferraz.cloud`)
      kind: Rule
      services:
        - name: ff-app
          port: 80
  tls:
    secretName: ff-certificate-secret
